--- a/nba-puzzle/package.json
+++ b/nba-puzzle/package.json
@@ -2,6 +2,9 @@
   "name": "nba-puzzle",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "scripts": {
     "start": "node app.js"
   },
