--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -2,6 +2,9 @@
   "name": "to-do-list",
   "version": "1.0.0",
   "description": "a to-do list webpage based on mongodb",
+  "engines": {
+    "node": "6.9.4"
+  },
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
