--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "to-do-list",
+  "name": "daily-to-do",
   "version": "1.0.0",
-  "description": "a to-do list webpage based on mongodb",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
