--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "to-do-list",
+  "name": "daily-to-do",
   "version": "1.0.0",
-  "description": "a to-do list webpage based on mongodb",
-  "engines": {
-    "node": "6.9.4"
-  },
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
