--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
+  },
+  "engines": {
+    "node": "v6.9.4",
+    "npm": "3.10.10"
   },
   "author": "Cynthia Xin Tong",
   "license": "ISC",
