--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "scripts": {
     "start": "node app.js"
-  },
-  "engines": {
-    "node": "v6.9.4",
-    "npm": "3.10.10"
   },
   "author": "Cynthia Xin Tong",
   "license": "ISC",
