--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "engines": {
-    "node": "v6.9.4",
+    "node": "6.9.4",
     "npm": "3.10.10"
   },
   "author": "Cynthia Xin Tong",
