--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
+    "fs": "0.0.1-security",
     "mongodb": "^2.2.24"
   }
 }
