--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "6.9.4",
-    "npm": "3.10.10"
+    "node": "6.9.1"
   },
   "author": "Cynthia Xin Tong",
   "license": "ISC",
