--- a/socket-drawing/package.json
+++ b/socket-drawing/package.json
@@ -2,7 +2,7 @@
   "name": "socket-drawing",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
       "start": "node app.js"
   },
