--- a/bounce-shoot/package.json
+++ b/bounce-shoot/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.0",
     "express": "^4.15.0",
+    "express-handlebars": "^3.0.0",
+    "fs": "0.0.1-security",
     "mongodb": "^2.2.24",
     "socket.io": "^1.7.3"
   }
