--- a/mailbot/package.json
+++ b/mailbot/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cron": "^1.2.1",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "fs": "0.0.1-security",
     "mongodb": "^2.2.25",
-    "node-schedule": "^1.2.1",
     "nodemailer": "^3.1.8",
     "request": "^2.81.0"
   }
